# logomaker_batch_copy

./: .gitignore  README.md  pyproject.toml
logomaker_batch/: __init__.py  batch_logo.py
tests/: test_install.py
