[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "logomaker-batch"
version = "0.1.0"
description = "Batch processing for logomaker"
readme = "README.md"
requires-python = ">=3.7.2"
dependencies = [
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = []


